--- a/index (1).html
+++ b/index (1).html
@@ -11,18 +11,18 @@
     <div class="contain">
         
     <div class="icon">
-        <h2 class="logo"><img src ="MESS__1_-removebg-preview.png" alt="logo";></h2>
+        <h2 class="logo"><img src ="../img/MESS__1_-removebg-preview.png" alt="logo";></h2>
     </div>
     <div class="navbar">
-        <a href="file:///C:/Users/hp/Downloads/index%20(1).html">Home</a>
+        <a href="index (1).html">Home</a>
         <a href="#contact">Contact</a>
         <div class="dropdown">
         <button class="dropbtn" onclick="myFunction()">Login
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content" id="myDropdown">
-          <a href="file:///C:/Users/hp/Downloads/Login%20Student.html?#index(1).html">Student</a>
-          <a href="file:///C:/Users/hp/Downloads/Login%20Student.html?#index(1).html">Mess Attendant</a>
+          <a href="student_login.php">Student</a>
+          <a href="attend_login.php">Mess Attendant</a>
         </div>
         </div> 
       </div>
